--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navLink {
+  color: black;
+  text-decoration: none;
+  transition: all 0.2s;
+  margin-left: 15px;
+
+
+}
+
+.navLink:hover {
+  color: #00000055;
+  text-decoration: none;
+  
+}
