--- a/src/css/index.css
+++ b/src/css/index.css
@@ -58,4 +58,13 @@ footer {
   height: 100px;
 }
 
+.player-wrapper {
+  position: relative;
+}
+ 
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
